background-Image header fixed
Les images de fond son maintenant "fixed"

--- a/assets/stylesheet_article.css
+++ b/assets/stylesheet_article.css
@@ -35,6 +35,10 @@ header.container{
 	margin-bottom: auto;
 }
 
+header div.fill{
+	background-attachment: fixed;
+}
+
 section{
 	margin-top: 0px;
 	min-height: 60vh;
