--- a/assets/stylesheet.css
+++ b/assets/stylesheet.css
@@ -23,6 +23,7 @@ body {
 	background-color: black;
 	padding-bottom: 0;
 	background-image: url("images/accueil.jpg");
+	background-attachment: fixed;
 }
 
 /* HEADER*/
